# neighborhood-united

./: .env.dev.example  .gitignore  CHEF_FIRST_REFACTOR_DIRECTIVE.md  CHEF_GALLERY_IMPLEMENTATION.md  CLAUDE.md  DEPLOYMENT_SECURITY.md  Dockerfile.celery  Dockerfile.celery-beat  Dockerfile.django  HANDOFF_WEB_GUIDELINES.md  N8N_DECOMMISSION_PLAN.md  README.md  WHISPER_API_INTEGRATION.md  assistant_id.txt  azure-pipelines.yml  celerybeat-schedule  celerybeat-schedule.db  conftest.py  datadump.json  db.sqlite3.bk  django_warnings.log.1  docker-compose.dev.yml  dump.rdb  index.html  instruction_guide.docx  login.html  manage.py  meal_assistant_implementation.py  meal_plan.xlsx  messages.json  pytest.ini  requirements.in  requirements.txt  run_meal_generation_tests.py  run_steps.json  sample_import.py  sautai_ios_project_plan.md  startup-simple.sh  startup.sh  test_commands.md  (+2 more)
.claude/: plan-telegram-webhook-routing.md
api/: __init__.py  cron_triggers.py  throttles.py  urls.py  views.py
chef_admin/: apps.py  urls.py  views.py
chef_services/: admin.py  apps.py  models.py  payments.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py  webhooks.py
chefs/: __init__.py  admin.py  apps.py  base_serializers.py  decorators.py  elastic.py  emails.py  forms.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py  webhooks.py
crew/: views.py
crm/: admin.py  (+6 more)
sautai_agents/: README.md  pyproject.toml
sautai_agents/src/sautai_agents/: crew.py  main.py
sautai_agents/src/sautai_agents/config/: agents.yaml  tasks.yaml
(+1177 files in other folders)
