[tool.poetry]
name = "sautai_agents"
version = "0.1.0"
description = "sautai_agents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
sautai_agents = "sautai_agents.main:run"
train = "sautai_agents.main:train"
replay = "sautai_agents.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
